Con subir imagen

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,11 @@
                 <button class="button button-assertive" ng-click="irPassword()">Olvidé mi password</a>
                 </button>
             </label>
+            <label class="item item-input item-stacked-label" style="text-align: center;">
+                <button class="button button-assertive" ng-click="irSubir()">Olvidé mi password</a>
+                </button>
+            </label>
+
         </div>
     </ion-content>
 </ion-view>
