--- a/templates/modificar.html
+++ b/templates/modificar.html
@@ -3,7 +3,7 @@
         <div style="text-align: center; margin-top: 20px;">
             <img src="img/ionic.png" />
         </div>
-        <div class="list" style="margin-top: 20px;" ng-init="mostrarDatos()">
+        <div class="list" style="margin-top: 20px;" >
             <label class="item item-input item-stacked-label">
                 <span >E-mail</span>
                 <input type="text" ng-model="user.email">
