--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
         </div>
         <div class="list" style="margin-top: 20px;">
             <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" href="#/app/modificar">Modificar</button>
+                <button class="button button-assertive" ng-click= "irModificar()">Modificar</button>
             </label>
             <label class="item item-input item-stacked-label" style="text-align: center;">
                 <button class="button button-assertive" href="#/app/verPerfil">Ver perfil</a>
