--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
                 <button class="button button-assertive" ng-click= "irModificar()">Modificar</button>
             </label>
             <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" href="#/app/verPerfil">Ver perfil</a>
+                <button class="button button-assertive" ng-click="irPerfil()">Ver perfil</a>
                 </button>
             </label>
             <label class="item item-input item-stacked-label" style="text-align: center;">
