--- a/templates/menu.html
+++ b/templates/menu.html
@@ -22,14 +22,17 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/primerNivel">
-          Primer nivel
+        <ion-item menu-close href="#/home">
+          Home
+        </ion-item>
+        <ion-item menu-close href="#/app/perfil">
+          Ver Perfil
         </ion-item>
         <ion-item menu-close href="#/app/modificar">
           Modificar información
         </ion-item>
-        <ion-item menu-close href="#/app/preguntas">
-          Panel de preguntas
+        <ion-item menu-close href="#/app/ranking">
+          Ranking
         </ion-item>
         <ion-item menu-close ng-click="logout()">
           Logout
