--- a/templates/newPassword.html
+++ b/templates/newPassword.html
@@ -1,23 +1,24 @@
-<ion-view>
-    <ion-header-bar class="bar-assertive">
-        <h1 class="title">Nueva Contraseña</h1>
-    </ion-header-bar>
+<ion-view view-title="Nuevo password">
+    <ion-nav-bar class="bar-positive">
+    </ion-nav-bar>
     <ion-content>
         <div style="text-align: center; margin-top: 20px;" ng-init="insertarCodigo()">
             <img src="img/ionic.png" />
         </div>
         <div class="list" style="margin-top: 20px;">
+            <div class="item item-divider icon ion-key">
+                Nuevo password
+            </div>
             <label class="item item-input item-stacked-label">
-                <span class="input-label">Nueva contraseña</span>
                 <input type="password" ng-model="user.contrasenaNueva">
             </label>
+            <div class="item item-divider icon ion-key">
+                Repita su nuevo password
+            </div>
             <label class="item item-input item-stacked-label">
-                <span class="input-label">Repita su nueva contraseña</span>
                 <input type="password" ng-model="user.contrasenaRep">
             </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="aceptar()">Aceptar</button>
-            </label>
+            <button class="button button-block button-positive" ng-click="aceptar()">Aceptar</button>
         </div>
     </ion-content>
 </ion-view>
