--- a/templates/login.html
+++ b/templates/login.html
@@ -1,33 +1,26 @@
-<ion-view title="Login" hide-back-button="true" enable-menu-with-back-views= "false">
+<ion-view view-title="Login">
     <ion-content>
         <div style="text-align: center; margin-top: 20px;">
             <img src="img/ionic.png" />
         </div>
         <div class="list" style="margin-top: 20px;">
+            <div class="item item-divider icon ion-email">
+                E-Mail
+            </div>
             <label class="item item-input item-stacked-label">
-                <span class="input-label">Usuario</span>
                 <input type="email" ng-model="user.email">
             </label>
+            <div class="item item-divider icon ion-key">
+                Password
+            </div>
             <label class="item item-input item-stacked-label">
-                <span class="input-label">Clave</span>
                 <input type="password" ng-model="user.contrasena">
             </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="ingresar()"> Ingresar</button>
-            </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="irRegistro()">Registrar</a>
-                </button>
-            </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="irPassword()">Olvidé mi password</a>
-                </button>
-            </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="irSubir()">Olvidé mi password</a>
-                </button>
-            </label>
-
+            <button class="button button-block button-positive" ng-click="ingresar()"> Ingresar</button>
+            <button class="button button-block button-outline button-dark" ng-click="irRegistro()">Crear una cuenta</button>
+            <button class="button button-small button-block button-clear button-dark" ng-click="irPassword()">Olvidé mi password</button>
+            <button class="button button-block button-balanced" ng-click="irSubir()">Subir imagen</a>
+            </button>
         </div>
     </ion-content>
 </ion-view>
