--- a/templates/objetivos.html
+++ b/templates/objetivos.html
@@ -1,12 +1,9 @@
-<ion-view hide-nav-bar="true">
-    <ion-header-bar class="bar-positive">
-        <h1 class="title">Panel de Preguntas</h1>
-        <div class="buttons">
-            <button class="button button-icon ion-compose" ng-click="limpiarObjetivo()">
-                Agregar Objetivo
-            </button>
-        </div>
-    </ion-header-bar>
+<ion-view view-title="Lista de objetivos">
+    <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-compose" ng-click="limpiarObjetivo()">
+            Agregar objetivo
+        </button>
+    </ion-nav-buttons>
     <ion-content>
         <div class="list" ng-init="visualizarObjetivos()">
             <ion-list show-reorder="data.showReorder">
@@ -31,6 +28,10 @@
                         <label class="item">
                             <span class="input-label" type="text">{{objetivo.votosAcumulados}}</span>
                         </label>
+                        <div class="item item-divider">Autor</div>
+                        <label class="item">
+                            <span class="input-label" type="text">{{objetivo.autorNombre}} {{objetivo.autorApellido}}</span>
+                        </label>
                         <div class="range">
                             <i class="icon ion-volume-low"></i>
                             <input type="range" name="volume" ng-model="objetivo.votos" min="1" max="5" value="3">
@@ -53,7 +54,7 @@
                 </ion-header-bar>
                 <ion-content class="padding">
                     <div class="list">
-                        {{objetivo.problema_id}}
+                        
                         <div class="item item-divider">Enunciado</div>
                         <label class="item item-input">
                             <input ng-model="objetivo.descripcion" type="text">
