--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -1,19 +1,23 @@
-<ion-view>
-    <ion-header-bar class="bar-assertive">
-        <h1 class="title">Recuperar password</h1>
-    </ion-header-bar>
+<ion-view view-title="Recuperar password">
+    <ion-nav-bar class="bar-positive">
+        <ion-nav-buttons side="primary">
+            <button class="button button-clear icon ion-arrow-left-c" ng-click="goBack()">
+                Volver
+            </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
     <ion-content>
         <div style="text-align: center; margin-top: 20px;">
             <img src="img/ionic.png" />
         </div>
         <div class="list" style="margin-top: 20px;">
+            <div class="item item-divider icon ion-email">
+                E-Mail
+            </div>
             <label class="item item-input item-stacked-label">
-                <span class="input-label">E-Mail</span>
                 <input type="text" ng-model="user.email">
             </label>
-            <label class="item item-input item-stacked-label" style="text-align: center;">
-                <button class="button button-assertive" ng-click="enviar()">Enviar</button>
-            </label>
+                <button class="button button-block button-positive" ng-click="enviar()">Enviar</button>
         </div>
     </ion-content>
 </ion-view>
