--- a/templates/preguntas.html
+++ b/templates/preguntas.html
@@ -59,7 +59,7 @@
                     </label>
                     <div class="item item-divider">Fecha límite para unirse</div>
                     <label class="item item-input">
-                        <input value="2015-09-07" ng-model="elemento.fecha" type="Date">
+                        <input placeholder="aaaa-mm-dd" ng-model="elemento.fecha" type="Date">
                     </label>
                 </div>
                 <div class="button-bar">
