--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -15,19 +15,19 @@
                 E-Mail
             </div>
             <label class="item item-input item-stacked-label">
-                <input type="email" ng-model="user.email">
+                <input type="email" ng-model="user.email" placeholder="Ingrese su e-mail">
             </label>
             <div class="item item-divider icon ion-person">
                 Nombre
             </div>
             <label class="item item-input item-stacked-label">
-                <input type="text" ng-model="user.nombre">
+                <input type="text" ng-model="user.nombre" placeholder="Ingrese su nombre">
             </label>
             <div class="item item-divider icon ion-person">
                 Apellido
             </div>
             <label class="item item-input item-stacked-label">
-                <input type="text" ng-model="user.apellido">
+                <input type="text" ng-model="user.apellido" placeholder="Ingrese su apellido">
             </label>
             <div class="item item-divider icon ion-person-stalker">
                 Género
