--- a/templates/browse-file.html
+++ b/templates/browse-file.html
@@ -1,6 +1,6 @@
 <div class="content padding">
     <input type="file" id="browseBtn" accept="image/*"/>
-    <button class="button button-block button-calm ion-paperclip uploadButton" ng-click="browseFile()">
-        Select File
+    <button class="button button-block button-dark ion-paperclip uploadButton" ng-click="browseFile()">
+        Cambiar Foto
     </button>
 </div>
