--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,15 +2,13 @@
     <ion-content>
         <div class="list" ng-init="visualizarRanking()">
             <ion-list show-reorder="data.showReorder">
-                <ion-item ng-repeat="item in items" item="item">
+                <ion-item ng-repeat="user in users" item="users">
                     <a class="item item-avatar item-checkbox">
-                        <img src="img/ionic.png" style=" margin-left: 25px;">
-                        <label class="checkbox">
-                            <h1>{{$index + 1}}</h1>
-                        </label>
-                        <label class="rank" style="margin-left: 30px;">
-                            <h2> {{ item.nombre}}</h2>
-                            <p>{{item.puntos}} Puntos</p>
+                        <n>{{$index + 1}}</n>
+                        <img ng-src="{{user.foto}}" width="60" height="60" style="margin-left: 30px;">
+                        <label class="rank" style="margin-top:-70px; margin-left:100px;">
+                        <h1>{{user.nombre}}</h1>
+                        <h2>{{user.puntos}} Puntos</h2>
                         </label>
                     </a>
                 </ion-item>
