con boton atras

--- a/templates/segundoNivel.html
+++ b/templates/segundoNivel.html
@@ -1,4 +1,4 @@
-<ion-view >
+<ion-view view-title="Segundo nivel">
     <ionContent header-shrink scroll-event-interval="5">
         <div style="height: 45px;"></div>
         <ion-scroll zooming="true" direction="xy" style="height: 100%; width: 100%;" has-bouncing="false">
