--- a/templates/tercerNivel.html
+++ b/templates/tercerNivel.html
@@ -6,7 +6,7 @@
             <!--<img ng-lick="show('Soy un reto!')" src="img/reto.png" class="posicion"></img>-->
             <button class="reto3 button button-icon" ng-click="reto()"><img src="img/reto.png"></img>
             </button>
-            <button class="preguntaPos button button-icon" ng-click=""><img src="img/pregunta.png"></img>
+            <button class="preguntaPos button button-icon" ng-click="irTrabajoFinal()"><img src="img/pregunta.png"></img>
             </button>
         </ion-scroll>
         <ionContent>
