--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,7 +23,7 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close href="#/home">
-          Home
+          Inicio
         </ion-item>
         <ion-item menu-close href="#/app/perfil">
           Ver Perfil
@@ -32,10 +32,13 @@
           Modificar información
         </ion-item>
         <ion-item menu-close href="#/app/ranking">
-          Ranking
+          Posiciones
+        </ion-item>
+        <ion-item menu-close href="#/app/acerca">
+          Acerca de
         </ion-item>
         <ion-item menu-close ng-click="logout()">
-          Logout
+          Cerrar sesión
         </ion-item>
       </ion-list>
     </ion-content>
