--- a/templates/newPassword.html
+++ b/templates/newPassword.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Nuevo password">
+<ion-view view-title="Recuperar contraseña">
     <ion-nav-bar class="bar-positive">
     </ion-nav-bar>
     <ion-content>
@@ -7,13 +7,13 @@
         </div>
         <div class="list" style="margin-top: 20px;">
             <div class="item item-divider icon ion-key">
-                Nuevo password
+                Nueva contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="user.contrasenaNueva">
             </label>
             <div class="item item-divider icon ion-key">
-                Repita su nuevo password
+                Repita su nueva contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="user.contrasenaRep">
