--- a/templates/preguntas.html
+++ b/templates/preguntas.html
@@ -1,7 +1,6 @@
-<ion-view view-title="Panel de Preguntas">
+<ion-view view-title="Preguntas">
     <ion-nav-buttons side="right">
         <button class="button button-icon button-clear ion-compose" ng-click="limpiar()">
-            Agregar pregunta
         </button>
     </ion-nav-buttons>
     <ion-content>
