--- a/templates/insertarCodigo.html
+++ b/templates/insertarCodigo.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view view-title="Recuperar contraseña">
     <ion-header-bar class="bar-assertive">
         <h1 class="title">Nueva Contraseña</h1>
     </ion-header-bar>
