--- a/templates/login.html
+++ b/templates/login.html
@@ -5,21 +5,20 @@
         </div>
         <div class="list" style="margin-top: 20px;">
             <div class="item item-divider icon ion-email">
-                E-Mail
+                Correo electrónico
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="email" ng-model="user.email">
             </label>
             <div class="item item-divider icon ion-key">
-                Password
+                Contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="user.contrasena">
             </label>
             <button class="button button-block button-positive" ng-click="ingresar()"> Ingresar</button>
             <button class="button button-block button-outline button-dark" ng-click="irRegistro()">Crear una cuenta</button>
-            <button class="button button-small button-block button-clear button-dark" ng-click="irPassword()">Olvidé mi password</button>
-            <button class="button button-block button-balanced" ng-click="irSubir()">Subir imagen</a>
+            <button class="button button-small button-block button-clear button-dark" ng-click="irPassword()">Olvidé mi contraseña</button>
             </button>
         </div>
     </ion-content>
