--- a/templates/primerNivel.html
+++ b/templates/primerNivel.html
@@ -1,10 +1,9 @@
-<ion-view view-title="Primer Nivel">
+<ion-view view-title="Primer nivel">
     <ionContent header-shrink scroll-event-interval="5">
         <div style="height: 45px;"></div>
         <ion-scroll zooming="true" direction="xy" style="height: 100%; width: 100%;" has-bouncing="false">
-            <div style="width: 1920px; height: 1080px; background: url('http://p1.pichost.me/i/48/1712120.jpg')"></div>
-            <!--<img ng-lick="show('Soy un reto!')" src="img/reto.png" class="posicion"></img>-->
-            <button class="posicion button button-icon" ng-click="reto()"><img src="img/reto.png"></img>
+            <div style="width: 1920px; height: 1080px; background: url('img/primerNivel.jpg')"></div>
+            <button class="reto3 button button-icon" ng-click="reto()"><img src="img/reto.png"></img>
             </button>
             <button class="preguntaPos button button-icon" ng-click="irPreguntas()"><img src="img/pregunta.png"></img>
             </button>
