--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -12,7 +12,7 @@
         </div>
         <div class="list" style="margin-top: 20px;">
             <div class="item item-divider icon ion-email">
-                E-Mail
+                Contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="email" ng-model="user.email" placeholder="Ingrese su e-mail">
@@ -35,13 +35,13 @@
             <ion-radio icon="ion-woman" ng-value="'femenino'" ng-model="user.genero">Femenino</ion-radio>
             <ion-radio icon="ion-man" ng-value="'masculino'" ng-model="user.genero">Masculino</ion-radio>
             <div class="item item-divider icon ion-key">
-                Password
+                Contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="user.contrasena">
             </label>
             <div class="item item-divider icon ion-key">
-                Confirmar password
+                Confirmar contraseña
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="user.contrasenaRep">
