--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Recuperar password">
+<ion-view view-title="Recuperar contraseña">
     <ion-nav-bar class="bar-positive">
         <ion-nav-buttons side="primary">
             <button class="button button-clear icon ion-arrow-left-c" ng-click="goBack()">
