--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -12,7 +12,7 @@
         </div>
         <div class="list" style="margin-top: 20px;">
             <div class="item item-divider icon ion-email">
-                Contraseña
+                Correo electrónico
             </div>
             <label class="item item-input item-stacked-label">
                 <input type="email" ng-model="user.email" placeholder="Ingrese su e-mail">
