--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,38 @@ input[type=file] {
     height: 0;
     overflow: auto;
 }
+
+.secretWord {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  font-size: 3rem;
+}
+
+.letter-button:disabled {
+  opacity: 0.5;
+  color: black;
+}
+
+#navcontainer ul
+{
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: center;
+}
+
+#navcontainer ul li { display: inline; }
+
+#navcontainer ul li a
+{
+text-decoration: none;
+padding: .2em 1em;
+color: #fff;
+background-color: #036;
+}
+
+#navcontainer ul li a:hover
+{
+color: #fff;
+background-color: #369;
+}
