--- a/templates/acerca.html
+++ b/templates/acerca.html
@@ -5,10 +5,10 @@
             <img src="img/udea.png">
         </div>
         <div style="text-align: center; margin-top: 20px;">
-            <a class="item item-thumbnail-right" href="#">
+            <a class="item " href="#">
                 <h1> Creado por: </h1>
                 <p>Carolina Isaza, Sebastián Jiménez y Jaime Londoño</p>
-                <p>Proyecto Integrador 1</p>
+                <p>Computación Móvil</p>
                 <p>Ingeniería de Sistemas</p>
                 <p>Universidad de Antioquia</p>
             </a>
