--- a/templates/menu.html
+++ b/templates/menu.html
@@ -34,6 +34,9 @@
         <ion-item menu-close href="#/app/ranking">
           Posiciones
         </ion-item>
+        <ion-item menu-close href="#/app/enlaces">
+          Enlaces importantes
+        </ion-item>
         <ion-item menu-close href="#/app/acerca">
           Acerca de
         </ion-item>
