--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -5,8 +5,8 @@
         </div>
         <browse-file></browse-file>
         <!--Directive 1-->
-        <div style="text-align: center; margin-top: 20px;">
-            <a class="item item-thumbnail-right" href="#">
+        <div style="text-align: center; margin-top: 20px; ">
+            <a class="item " href="#">
                 <h1>{{datosUsuario.nombre}}  {{datosUsuario.apellido}}</h1>
                 <p> {{datosUsuario.email}}</p>
             </a>
