--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -6,7 +6,7 @@
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
+    <ion-content verflow-scroll="true" padding="'true'">
         <div style="text-align: center; margin-top: 20px;">
             <img src="img/ionic.png" />
         </div>
