--- a/templates/segundoNivel.html
+++ b/templates/segundoNivel.html
@@ -10,6 +10,8 @@
             </button>
             <button class="preguntaPos button button-icon" ng-click="mostrarPregunta()"><img src="img/pregunta.png"></img>
             </button>
+            <button class="estadoPos button button-icon" ng-click="irEstadoArte()"><img src="img/estadoArte.png"></img>
+            </button>
         </ion-scroll>
         <ionContent>
             <script id="preguntaActual.html" type="text/ng-template">
