--- a/templates/tercerNivel.html
+++ b/templates/tercerNivel.html
@@ -6,7 +6,7 @@
             <!--<img ng-lick="show('Soy un reto!')" src="img/reto.png" class="posicion"></img>-->
             <button class="objetivoPos button button-icon" ng-click="mostrarObjetivosSelec()"><img src="img/objetivo.png"></img>
             </button>
-             <button class="reto3 button button-icon" ng-click="mostrarObjetivosSelec()"><img src="img/reto.png"></img>
+             <button class="reto3 button button-icon" ng-click="reto()"><img src="img/reto.png"></img>
             </button>
             <button class="articuloPos button button-icon" ng-click="irTrabajoFinal()"><img src="img/articulo.png"></img>
             </button>
