--- a/templates/modificar.html
+++ b/templates/modificar.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Modificar perfil">
-    <ion-content onLoad="mostrarDatos()">
+    <ion-content onLoad="mostrarDatos()" verflow-scroll="true" padding="'true'">
         <div style="text-align: center; margin-top: 20px;">
             <img src="img/ionic.png" />
         </div>
@@ -12,9 +12,10 @@
             <label class="item item-input item-stacked-label">
                 <input type="text" ng-model="user.email">
             </label>
-            <button class="button button-outline button-block button-dark icon ion-gear-a" ng-click="showPopup()">  Modificar correo electrónico</button>
+            <button class="button  button-block button-dark icon ion-gear-a" ng-click="showPopup()">  Modificar correo electrónico</button>
         </div>
         <div class="list">
+            
             <div class="item item-divider icon ion-key">
                 Contraseña actual
             </div>
@@ -33,7 +34,7 @@
             <label class="item item-input item-stacked-label">
                 <input type="password" ng-model="userCont.contrasenaRep">
             </label>
-                <button class="button button-outline button-block button-dark icon ion-gear-a" ng-click="modificarContrasena()">  Modificar Contraseña</button>
+                <button class="button button-block button-dark icon ion-gear-a" ng-click="modificarContrasena()">  Modificar Contraseña</button>
         </div>
     </ion-content>
 </ion-view>
