--- a/templates/newPassword.html
+++ b/templates/newPassword.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Recuperar contraseña">
     <ion-nav-bar class="bar-positive">
     </ion-nav-bar>
-    <ion-content>
+    <ion-content verflow-scroll="true" padding="'true'">
         <div style="text-align: center; margin-top: 20px;" ng-init="insertarCodigo()">
             <img src="img/ionic.png" />
         </div>
